--- a/HTML/blog-detail.html
+++ b/HTML/blog-detail.html
@@ -61,7 +61,7 @@
 
 	<section class="blog-detail section-dark">
 		<div class="blog-detail-banner wow fadeIn">
-			<img src="assets/images/blog-banner.jpg" alt="Blog Desc">
+			<img src="assets/images/hamburg.jpg" alt="Blog Desc">
 		</div>
 		<div class="blog-detail-contents wow fadeInUp">
 			<h2>The single greatest gift to get your friend who always travels</h2>
