--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,304 +1,328 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Justin - One Page Personal Template</title>
-	<meta name="description" content="Justin - One Page Personal Template" />
-	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
-	<meta name="author" content="beingeorge" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Justin - One Page Personal Template</title>
+    <meta name="description" content="Justin - One Page Personal Template" />
+    <meta
+      name="keywords"
+      content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard"
+    />
+    <meta name="author" content="beingeorge" />
 
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400&display=swap"
+      rel="stylesheet"
+    />
 
-	<!-- Vendor Css-->
-	<link rel="stylesheet" href="assets/css/vendor.css" />
-	
-</head>
+    <!-- Vendor Css-->
+    <link rel="stylesheet" href="assets/css/vendor.css" />
+  </head>
 
-<body>
+  <body>
+    <div class="banner">
+      <div class="bannerIn">
+        <h1>Kerstin Draeger</h1>
+        <p>One Page Personal Template</p>
+        <a
+          href="https://themeforest.net/item/justin-personal-portfolio/24925181"
+          >Purchase Now</a
+        >
+      </div>
+      <div id="particles-js"></div>
+    </div>
 
-	<div class="banner">
-		<div class="bannerIn">
-			<h1>Justin</h1>
-			<p>One Page Personal Template</p>
-			<a href="https://themeforest.net/item/justin-personal-portfolio/24925181">Purchase Now</a>
-		</div>
-		<div id="particles-js">
-			
-		</div>
-	</div>
+    <div class="page-wrapper section section-light">
+      <div class="container">
+        <h2 class="page-head mb-5">Main Demos</h2>
 
-	<div class="page-wrapper section section-light">
-		<div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <a href="index-1.html" class="mb-5">
+              <img src="assets/images/demo/1.jpg" alt="Home 1" />
+              <p>Parallax Demo</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-2.html" class="mb-5">
+              <img src="assets/images/demo/2.jpg" alt="Home 1" />
+              <p>Parallax Slider Demo</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-3.html" class="mb-5">
+              <img src="assets/images/demo/3.jpg" alt="Home 1" />
+              <p>youtube Demo</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-4.html" class="mb-5">
+              <img src="assets/images/demo/4.jpg" alt="Home 1" />
+              <p>Liquid Distortion Demo</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-			<h2 class="page-head mb-5">Main Demos</h2>
+    <div class="page-wrapper section">
+      <div class="container">
+        <h2 class="page-head mb-5">Particle Demos</h2>
 
-			<div class="row justify-content-center">
-				<div class="col-md-6">
-					<a href="index-1.html" class="mb-5">
-						<img src="assets/images/demo/1.jpg" alt="Home 1">
-						<p>Parallax Demo</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-2.html" class="mb-5">
-						<img src="assets/images/demo/2.jpg" alt="Home 1">
-						<p>Parallax Slider Demo</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-3.html" class="mb-5">
-						<img src="assets/images/demo/3.jpg" alt="Home 1">
-						<p>youtube Demo</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-4.html" class="mb-5">
-						<img src="assets/images/demo/4.jpg" alt="Home 1">
-						<p>Liquid Distortion Demo</p>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <a href="index-6.html" class="mb-5">
+              <img src="assets/images/demo/6.jpg" alt="Home 1" />
+              <p>Default Particle</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-5.html" class="mb-5">
+              <img src="assets/images/demo/5.jpg" alt="Home 1" />
+              <p>dust Particle</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-7.html" class="mb-5">
+              <img src="assets/images/demo/7.jpg" alt="Home 1" />
+              <p>Shape Particle</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-8.html" class="mb-5">
+              <img src="assets/images/demo/8.jpg" alt="Home 1" />
+              <p>Snow Particle</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-	<div class="page-wrapper section">
-		<div class="container">
+    <div class="page-wrapper section section-light">
+      <div class="container">
+        <h2 class="page-head mb-5">Creative Demos</h2>
 
-			<h2 class="page-head mb-5">Particle Demos</h2>
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <a href="index-9.html" class="mb-5">
+              <img src="assets/images/demo/9.jpg" alt="Home 1" />
+              <p>Creative Demo 1</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-10.html" class="mb-5">
+              <img src="assets/images/demo/10.jpg" alt="Home 1" />
+              <p>Creative Demo 2</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-11.html" class="mb-5">
+              <img src="assets/images/demo/11.jpg" alt="Home 1" />
+              <p>Creative Demo 3</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-12.html" class="mb-5">
+              <img src="assets/images/demo/12.jpg" alt="Home 1" />
+              <p>Creative Demo 4</p>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="index-13.html" class="mb-5">
+              <img src="assets/images/demo/13.jpg" alt="Home 1" />
+              <p>Creative Demo 5</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-			<div class="row justify-content-center">
-				<div class="col-md-6">
-					<a href="index-6.html" class="mb-5">
-						<img src="assets/images/demo/6.jpg" alt="Home 1">
-						<p>Default Particle</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-5.html" class="mb-5">
-						<img src="assets/images/demo/5.jpg" alt="Home 1">
-						<p>dust Particle</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-7.html" class="mb-5">
-						<img src="assets/images/demo/7.jpg" alt="Home 1">
-						<p>Shape Particle</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-8.html" class="mb-5">
-						<img src="assets/images/demo/8.jpg" alt="Home 1">
-						<p>Snow Particle</p>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
+    <footer>
+      &copy; Justin 2020 | Created by
+      <a
+        target="_blank"
+        href="https://themeforest.net/user/beingeorge/portfolio"
+        >beingeorge</a
+      >
+    </footer>
 
-	<div class="page-wrapper section section-light">
-		<div class="container">
+    <style type="text/css">
+      #particles-js {
+        position: absolute;
+        left: 0;
+        right: 0;
+        height: 100%;
+        z-index: 0;
+        top: 0;
+        bottom: 0;
+      }
+      .banner {
+        height: 500px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        background: #2a2d36;
+        align-content: center;
+        text-align: center;
+        position: relative;
+        overflow: hidden;
+      }
 
-			<h2 class="page-head mb-5">Creative Demos</h2>
+      .bannerIn {
+        position: relative;
+        z-index: 6;
+      }
 
-			<div class="row justify-content-center">
-				<div class="col-md-6">
-					<a href="index-9.html" class="mb-5">
-						<img src="assets/images/demo/9.jpg" alt="Home 1">
-						<p>Creative Demo 1</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-10.html" class="mb-5">
-						<img src="assets/images/demo/10.jpg" alt="Home 1">
-						<p>Creative Demo 2</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-11.html" class="mb-5">
-						<img src="assets/images/demo/11.jpg" alt="Home 1">
-						<p>Creative Demo 3</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-12.html" class="mb-5">
-						<img src="assets/images/demo/12.jpg" alt="Home 1">
-						<p>Creative Demo 4</p>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a href="index-13.html" class="mb-5">
-						<img src="assets/images/demo/13.jpg" alt="Home 1">
-						<p>Creative Demo 5</p>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
+      .banner h1 {
+        color: #fff;
+        font-weight: 300;
+        padding-bottom: 20px;
+        margin-bottom: 30px;
+        letter-spacing: 5px;
+        width: 100%;
+        font-size: 50px;
+        font-family: 'Josefin Sans', sans-serif;
+        position: relative;
+      }
 
-	<footer>
-		&copy; Justin 2020 | Created by <a target="_blank" href="https://themeforest.net/user/beingeorge/portfolio">beingeorge</a>
-	</footer>
+      .banner h1:after {
+        background-image: -webkit-linear-gradient(
+          left,
+          rgba(0, 0, 0, 0),
+          rgb(165, 165, 165),
+          rgba(0, 0, 0, 0)
+        );
+        background-image: -moz-linear-gradient(
+          left,
+          rgba(0, 0, 0, 0),
+          rgba(0, 0, 0, 0.75),
+          rgba(0, 0, 0, 0)
+        );
+        background-image: -ms-linear-gradient(
+          left,
+          rgba(0, 0, 0, 0),
+          rgba(0, 0, 0, 0.75),
+          rgba(0, 0, 0, 0)
+        );
+        background-image: -o-linear-gradient(
+          left,
+          rgba(0, 0, 0, 0),
+          rgba(0, 0, 0, 0.75),
+          rgba(0, 0, 0, 0)
+        );
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#000000', GradientType=1);
+        position: absolute;
+        left: 0;
+        right: 0;
+        height: 1px;
+        width: 100%;
+        content: '';
+        bottom: 0px;
+        max-width: 300px;
+        margin: 0 auto;
+      }
 
+      .banner * {
+        width: 100%;
+      }
 
-	<style type="text/css">
-#particles-js {
-position: absolute;
-left: 0;
-right: 0;
-height: 100%;
-z-index: 0;
-top: 0;
-bottom: 0;
-}
-.banner {
-	height: 500px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	background: #2a2d36;
-	align-content: center;
-	text-align: center;
-	position: relative;
-	overflow: hidden;
-}
+      .banner p {
+        color: #fff;
+        font-size: 20px;
+        letter-spacing: 4px;
+        text-transform: uppercase;
+        font-weight: 200;
+      }
 
-.bannerIn {
-    position: relative;
-    z-index: 6;
-}
+      .banner a {
+        display: inline-block;
+        padding: 10px 30px;
+        background: rgba(255, 255, 255, 0.2);
+        color: #fff;
+        border-radius: 3px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin: 20px auto;
+        font-size: 12px;
+        width: auto;
+        background: rgba(255, 255, 255, 0.1) !important;
+      }
 
-.banner h1 {
-    color: #fff;
-    font-weight: 300;
-    padding-bottom: 20px;
-    margin-bottom: 30px;
-    letter-spacing: 5px;
-    width: 100%;
-    font-size: 50px;
-    font-family: 'Josefin Sans', sans-serif;
-    position: relative;
-}
+      .banner a:hover {
+        text-decoration: none;
+        background: rgba(255, 255, 255, 0.2) !important;
+      }
 
-.banner h1:after {
-	    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
-    background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#000000', GradientType=1);
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 1px;
-    width: 100%;
-    content: "";
-    bottom: 0px;
-    max-width: 300px;
-    margin: 0 auto;
-}
+      .section a:hover {
+        text-decoration: none;
+      }
 
-.banner * {
-    width: 100%;
-}
+      .page-head {
+        text-align: center;
+        font-size: 28px;
+        color: #333;
+        letter-spacing: 4px;
+        margin-bottom: 70px !important;
+        text-transform: uppercase;
+        font-weight: 300;
+      }
 
-.banner p {
-	color: #fff;
-    font-size: 20px;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    font-weight: 200;
-}
+      .section {
+        padding: 100px 0;
+        background: #f7f7f7;
+      }
 
-.banner a {
-    display: inline-block;
-    padding: 10px 30px;
-    background: rgba(255,255,255,.2);
-    color: #fff;
-    border-radius: 3px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin: 20px auto;
-    font-size: 12px;
-    width: auto;
-    background: rgba(255,255,255,0.1) !important
-}
+      .section-light {
+        background: #fff;
+      }
 
-.banner a:hover {
-	text-decoration: none;
-	background: rgba(255,255,255,0.2) !important
-}
+      .section a {
+        display: block;
+        text-align: center;
+        transition: 1s;
+      }
 
-.section a:hover {
-    text-decoration: none;
-}
+      .section a img {
+        border: 6px solid rgba(0, 0, 0, 0.1);
+        border-radius: 9px;
+        overflow: hidden;
+        transition: 1s;
+        width: 100%;
+      }
 
-.page-head {
-    text-align: center;
-    font-size: 28px;
-    color: #333;
-    letter-spacing: 4px;
-    margin-bottom: 70px !important;
-    text-transform: uppercase;
-    font-weight: 300;
-}
+      .section a p {
+        text-transform: uppercase;
+        color: #4a4a4a;
+        font-weight: 700;
+        margin-top: 10px;
+      }
 
-.section {
-    padding: 100px 0;
-    background: #f7f7f7;
-}
+      .section a:hover img {
+        transform: translateY(-10px);
+      }
 
-.section-light {
-    background: #fff;
-}
+      footer {
+        padding: 60px 0;
+        background: #2a2d36;
+        color: #fff;
+        text-align: center;
+      }
 
-.section  a {
-    display: block;
-    text-align: center;
-    transition: 1s;
-}
+      footer a {
+        color: #fff;
+        text-decoration: underline;
+      }
 
-.section a img {
-    border: 6px solid rgba(0,0,0,0.1);
-    border-radius: 9px;
-    overflow: hidden;
-    transition: 1s;
-    width: 100%;
-}
+      footer a:hover {
+        color: #fff;
+        text-decoration: none;
+      }
+    </style>
 
-.section a p {
-    text-transform: uppercase;
-    color: #4a4a4a;
-    font-weight: 700;
-    margin-top: 10px;
-}
-
-.section a:hover img {
-    transform: translateY(-10px);
-}
-
-footer {
-    padding: 60px 0;
-    background: #2a2d36;
-    color: #fff;
-    text-align: center;
-}
-
-footer a {
-    color: #fff;
-    text-decoration: underline;
-}
-
-footer a:hover {
-    color: #fff;
-    text-decoration: none;
-}
-	</style>
-
-	<!-- Particles js -->
-	<script src="assets/js/particles.min.js"></script> 
-	<script src="assets/js/particlesjs-config-4.js"></script>
-
-</body>
+    <!-- Particles js -->
+    <script src="assets/js/particles.min.js"></script>
+    <script src="assets/js/particlesjs-config-4.js"></script>
+  </body>
 </html>
